# Lumina

./: .gitignore  CMakeLists.txt  Dimibot.cpp  Dimibot.h  Lumina.cpp  Lumina.h  main.cpp
Book/: Book.cpp  Book.h
Evaluation/: Eval.cpp  Eval.h  EvalHelp.cpp  EvalHelp.h
EvaluationFeatures/: Features.h
Helper/: HelperFunctions.cpp  HelperFunctions.h  SEE.cpp  SEE.h
MoveOrdering/: Orderer.cpp  Orderer.h
PST/: PST.cpp  PST.h
PrecomputedValues/: Precomputed.h
TT/: TT.cpp  TT.h
